# acpms

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  cors.json  docker-compose.yml  install.sh  test_cf.json  update.sh
crates/db/: Cargo.toml
crates/db/bindings/: AddReviewCommentRequest.ts  AgentLog.ts  ArtifactResponse.ts  AttemptStatus.ts  BuildArtifact.ts  BuildConfig.ts  BuildResult.ts  BuildStartedResponse.ts  CloseSprintRequest.ts  CloseSprintResult.ts  CloudflareTunnel.ts  CreateDeploymentEnvironmentRequest.ts  CreateNextSprintRequest.ts  CreateProjectFromTemplateRequest.ts  CreateProjectRequest.ts  CreateProjectTemplateRequest.ts  CreateRequirementRequest.ts  CreateSprintRequest.ts  CreateTaskAttemptRequest.ts  CreateTaskRequest.ts  CreateUserRequest.ts  DeploymentArtifactStrategy.ts  DeploymentCheckResult.ts  DeploymentConnectionTestResponse.ts  DeploymentEnvironment.ts  DeploymentEnvironmentSecret.ts  DeploymentEnvironmentSecretInput.ts  DeploymentRelease.ts  DeploymentReleaseStatus.ts  DeploymentResponse.ts  DeploymentRun.ts  DeploymentRunStatus.ts  DeploymentRuntimeType.ts  DeploymentSecretType.ts  DeploymentSourceType.ts  DeploymentTargetType.ts  DeploymentTimelineEvent.ts  DeploymentTimelineEventType.ts  DeploymentTimelineStep.ts  DeploymentTriggerType.ts  (+64 more)
crates/db/migrations/: 20260105000001_initial_schema.sql  20260105000002_rbac_functions.sql  20260106000001_gitlab_integration.sql  20260106000002_add_archived_status.sql  20260106151544_encrypt_gitlab_pats.sql  20260106152000_audit_triggers.sql  20260106152001_audit_retention.sql  20260106153000_add_project_roles.sql  20260106154000_performance_indexes.sql  20260106160000_gitlab_oauth_webhook_enhancements.sql  20260107000001_gitlab_webhooks.sql  20260107000002_add_password_hash.sql  20260107000003_add_project_metadata.sql  20260107000004_add_requirements.sql  20260107000005_add_sprints.sql  20260107000006_add_sprint_to_requirements.sql  20260107000007_add_refresh_tokens.sql  20260107000008_add_token_blacklist.sql  20260107055345_multi_role_support.sql  20260107063822_update_system_role_enum.sql  20260107135702_system_settings.sql  20260107150000_add_init_task_type.sql  20260108000001_cloudflare_tunnels.sql  20260108135037_fix_rbac_functions_for_roles_array.sql  20260108152705_add_project_require_review.sql  20260109000001_seed_admin_user.sql  20260109000002_add_dns_record_id.sql  20260109045133_add_architecture_config.sql  20260109062654_add_file_diffs.sql  20260109140001_project_settings.sql  20260109140002_project_types.sql  20260109140003_review_comments.sql  20260109140004_deployments.sql  20260110145055_add_kanban_indexes.sql  20260114225627_add_s3_diff_metadata.sql  20260115000001_tool_approvals.sql  20260115000002_add_normalized_logs.sql  20260115000003_add_agent_settings.sql  20260115000004_add_workspace_repos.sql  20260202000001_add_subagent_tracking.sql  (+37 more)
crates/db/src/: lib.rs  models.rs  project-type-detector.rs  schema.rs
crates/db/tests/: models_tests.rs  repository_tests.rs
crates/deployment/: Cargo.toml
crates/deployment/src/: cloudflare.rs  lib.rs  traefik.rs
crates/executors/: Cargo.toml  LOG_AGGREGATION.md
crates/executors/bindings/: ActionOperation.ts  ActionType.ts  AgentSettings.ts  AggregatedAction.ts  ExecutionStatus.ts  FileChange.ts  FileChangeType.ts  FilterAction.ts  MessageFilter.ts  NormalizedEntry.ts  SubagentSpawn.ts  TodoItem.ts  TodoStatus.ts  ToolStatus.ts
crates/executors/examples/: log_aggregation.rs
crates/executors/src/: agent_client.rs  agent_log_buffer.rs  approval.rs  assistant_log_buffer.rs  claude.rs  codex.rs  cursor.rs  diff_snapshot.rs  document_tasks.rs  follow_up_utils.rs  gemini.rs  git-credential-helper.rs  input_queue.rs  job_queue.rs  knowledge_index.rs  lib.rs  log_writer.rs  msg_store.rs  normalization.rs  normalization_contract.rs  orchestrator-gitops.rs  orchestrator-status.rs  orchestrator.rs  process.rs  project_vault.rs  protocol.rs  retry_handler.rs  router_config.rs  sdk-normalized-types.rs  session.rs  skill_runtime.rs  stdout_dup.rs  task_skills.rs  webhook_job.rs  worker-pool-config.rs  worker-pool-executor.rs  worker-pool-tests.rs  worker_pool.rs  worktree.rs
crates/executors/test-fixtures/: claude_metadata_realistic.jsonl  codex_stream_realistic.jsonl  gemini_stream_realistic.jsonl
crates/executors/tests/: log-sanitization-tests.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  types.rs
crates/gitlab/: Cargo.toml
crates/gitlab/src/: client.rs  types.rs
crates/preview/: Cargo.toml
crates/preview/src/: manager.rs
crates/server/: Cargo.toml
crates/server/bindings/: ActionType.ts  CommandExitStatus.ts  CommandRunResult.ts  FileChange.ts  NormalizedEntry.ts  NormalizedEntryError.ts  NormalizedEntryType.ts  TodoItem.ts  TodoStatus.ts  ToolResult.ts  ToolStatus.ts
crates/server/src/: deploy_context_preparer.rs  error.rs  lib.rs  main.rs  ssh.rs  state.rs
crates/server/tests/: README.md  SETUP.md  VERIFICATION.md  admin_tests.rs  agent_activity_tests.rs  agent_auth_tests.rs  approvals_tests.rs  auth_tests.rs  dashboard_tests.rs  deployment_environments_tests.rs  deployments_tests.rs  execution_processes_follow_up_tests.rs  execution_processes_logs_tests.rs  execution_processes_reset_tests.rs  gitlab_tests.rs  health_tests.rs  helpers.rs  mod.rs  openclaw_admin_tests.rs  openclaw_gateway_tests.rs  preview_mocked_lifecycle_tests.rs  preview_tests.rs  project_assistant_tests.rs  projects_tests.rs  rate_limit_tests.rs  repository_access_live_tests.rs  repository_context_refresh_live_tests.rs  requirement_breakdowns_tests.rs  requirements_tests.rs  reviews_tests.rs  run_tests.sh  settings_tests.rs  setup_and_run.sh  sprints_tests.rs  task_attempts_tests.rs  tasks_tests.rs  templates_tests.rs  users_tests.rs  websocket_streams_tests.rs
crates/services/: Cargo.toml
crates/services/bindings/: AgentAvatar.ts  AgentStats.ts  DashboardAgentLog.ts  DashboardData.ts  DashboardHumanTask.ts  DashboardProject.ts  DashboardStats.ts  PrStats.ts  (+3 more)
(+869 files in other folders)
