[workspace]
members = [
    "crates/db",
    "crates/server",
    "crates/services",
    "crates/executors",
    "crates/utils",
    "crates/deployment",
    "crates/gitlab",
    "crates/github",
    "crates/preview",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ACPMS Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7.5", features = ["macros", "multipart", "ws"] }
tower = "0.4"
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Type generation
ts-rs = { version = "10.0", features = ["serde-json-impl", "chrono-impl", "uuid-impl", "no-serde-warnings"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL
url = { version = "2.5", features = ["serde"] }

# Utilities
dotenvy = "0.15"

# AWS S3 (rustls for cross-compile; no OpenSSL)
aws-config = { version = "1.1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-s3 = { version = "1.14", default-features = false, features = ["rustls", "rt-tokio"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Axum extras
axum-extra = { version = "0.9", features = ["typed-header"] }

# API Documentation
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.0", features = ["axum"] }

# Input Validation
validator = { version = "0.18", features = ["derive"] }

# SSH (native Rust, no sshpass)
russh = "0.57"
