[package]
name = "acpms-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true

# Additional for migration
base64 = "0.22"
