[package]
name = "acpms-github"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
