[package]
name = "acpms-preview"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
acpms-db = { path = "../db" }
acpms-utils = { path = "../utils" }
acpms-deployment = { path = "../deployment" }
acpms-services = { path = "../services" }

# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true
